<resources>
    <string name="app_name">微信红包</string>
    <string name="pref_open">抢红包</string>
    <string name="pre_not_self">自己发的不抢</string>
    <string name="pref_delay">延时抢红包</string>
    <string name="pref_delay_time">最大延时时长(毫秒)</string>
    <string name="pref_whisper">私聊不抢</string>
    <string name="pref_not_mute">免打扰不抢</string>
    <string name="quick_open">快速拆包</string>
    <string name="delay_message">延迟0毫秒拆开红包</string>
    <string name="setting">设置</string>
    <string name="wechat_donate">微信捐赠</string>
    <string name="alipay_donate">支付宝捐赠</string>
    <string name="wake_up">定时唤醒</string>
    <string name="pref_others">其它</string>
    <string name="pref_keywords">包含关键字不抢</string>
    <string name="pref_password">QQ口令红包</string>
</resources>
